--- a/style.css
+++ b/style.css
@@ -1,54 +1,83 @@
-body{
+body {
     margin: 0;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
-.input-fields{
+.input-fields {
     margin: 2px auto;
     max-width: 500px;
-    
+
 }
 
-.input-fields input,textarea{
+.input-fields input,
+textarea {
     width: 100%;
     height: 40px;
     margin: 2px;
 }
 
-input:focus,textarea:focus {
+input:focus,
+textarea:focus {
     outline: none;
-    border:2px solid rgb(68, 218, 255);
+    border: 2px solid rgb(227, 229, 233);
 
 }
 
-.hero{
-    background-color: rgb(85, 85, 85);
+.hero {
+    background-color: rgb(94, 86, 86);
     text-align: center;
     padding: 10px;
-    color:white
+    color: rgb(228, 222, 222)
 }
 
-.main{
+.main {
     display: flex;
     justify-content: space-around;
     padding: 10px;
-    background-color: rgb(68, 218, 255);
+    background: #8E9CB5;
+    background: linear-gradient(to bottom right, #8E9CB5, #628B5C);
+    ;
 }
 
-.main h2{
-    border-bottom: 2px solid rgb(7, 7, 7);
+.main h2 {
+    border-bottom: 1px solid rgba(51, 48, 48, 0.9);
     width: max-content;
-    color:white
+    color: rgb(22, 22, 22)
 }
-.btn{
+
+.btn {
     text-align: center;
     margin: 2px;
 }
-button{
+
+button {
     width: 150px;
     background-color: rgb(68, 218, 255);
     color: white;
     font-size: 18px;
     border: none;
     border-radius: 5px;
+    transition: all 0.4s ease-in;
+}
+
+#display-image {
+    width: 80px;
+    height: 85px;
+    border: 1px solid black;
+    border-radius: 50%;
+    background-position: center;
+    background-size: cover;
+}
+
+
+button:hover {
+    cursor: pointer;
+    transform: translateY(-2px);
+    background-color: #8E9CB5;
+}
+
+button:active {
+    cursor: pointer;
+    transform: skewY(0px);
+    background-color: #3a3e44;
 }
